🐛 fix overflow element

--- a/src/App.css
+++ b/src/App.css
@@ -48,13 +48,6 @@ html {
   }
 }
 
-@media screen and (max-width: 1023px) {
-  .page-container {
-    height: 81svh;
-    
-  }
-}
-
 @supports (-webkit-touch-callout: none) {
   body {
     /* The hack for Safari */
